--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -24,10 +24,10 @@
   
   
   
-  <ion-fab vertical="top" horizontal="start" routerLink="/tab5">
+  <!-- <ion-fab vertical="top" horizontal="start" routerLink="/tab5">
     <ion-fab-button>
       <ion-icon name="person"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
   
 </ion-content>
