--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,13 +11,19 @@
       <ion-icon aria-hidden="true" name="calendar-number-outline"></ion-icon>
     </ion-tab-button>
 
-    <!-- <ion-tab-button tab="tab3" href="/tabs/tab3" [class.tab-active]="selectedTab === 'tab3'" [class.tab-inactive]="selectedTab !== 'tab3'" (click)="changeTab('tab3')">
+    <!-- <ion-tab-button tab="tab3" href="/tabs/tab3" [class.tab-active]="selectedTab === 'tab3'"
+       [class.tab-inactive]="selectedTab !== 'tab3'" (click)="changeTab('tab3')">
       <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
         </ion-tab-button> -->
 
     <ion-tab-button tab="tab4" href="/tabs/tab4" [class.tab-active]="selectedTab === 'tab4'"
       [class.tab-inactive]="selectedTab !== 'tab4'" (click)="changeTab('tab4')">
       <ion-icon aria-hidden="true" name="logo-instagram"></ion-icon>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab5" href="/tabs/tab5" [class.tab-active]="selectedTab === 'tab5'"
+      [class.tab-inactive]="selectedTab !== 'tab3'" (click)="changeTab('tab3')">
+      <ion-icon aria-hidden="true" name="person"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 
