acabar tab 5 y mostrar dos eventos en un dia

--- a/src/app/event-form/event-form.page.html
+++ b/src/app/event-form/event-form.page.html
@@ -20,7 +20,7 @@
   <ion-item>
     <ion-label position="stacked">Fecha</ion-label>
     <div class="calendar-container">
-      <ion-datetime displayFormat="DD/MM/YYYY" presentation="date" class="custom-datetime" ></ion-datetime>
+      <ion-datetime displayFormat="DD/MM/YYYY" presentation="date" class="custom-datetime" [(ngModel)]="fechaEvento"></ion-datetime>
     </div>
   </ion-item>
 
