--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -89,13 +89,10 @@ ion-item {
 .circle {
   position: fixed;
   top: 8vh;
-  left: 5vh;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  overflow: hidden;
-  display: flex; /* Usamos flexbox */
-  justify-content: center; /* Centramos horizontalmente */
+  left: 1vh;
+  width: 130px;
+  height: auto;
+  
 }
 
 ion-fab {
