--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,9 +4,11 @@
   <div class="centered-image">
     <img src="../../assets/images/fallallibret1.png" alt="Descripción de la imagen">
   </div>
-  
+  <div class="circle2">
+    <img src="../../assets/images/fentfalla__13_-removebg-preview.png" alt="Imagen">
+  </div>
   <h1>Els nostres representants.</h1>
-  
+
   <ion-card class="main-card" *ngFor="let card of cards">
     <ion-card-content>
       <div class="card-container">
@@ -21,13 +23,13 @@
       </div>
     </ion-card-content>
   </ion-card>
-  
-  
-  
+
+
+
   <!-- <ion-fab vertical="top" horizontal="start" routerLink="/tab5">
     <ion-fab-button>
       <ion-icon name="person"></ion-icon>
     </ion-fab-button>
   </ion-fab> -->
-  
+
 </ion-content>
