--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,7 +4,7 @@
   <div class="circle-background2"></div>
 
   <div class="circle">
-    <img src="../../assets/images/casaleovsg.svg" alt="Imagen">
+    <img src="../../assets/images/fentfalla__13_-removebg-preview.png" alt="Imagen">
   </div>
 
   <div class="centered-form">
