--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1" [class.tab-active]="selectedTab === 'tab1'"
       [class.tab-inactive]="selectedTab !== 'tab1'" (click)="changeTab('tab1')">
-      <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
+      <ion-icon name="bonfire-outline"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2" [class.tab-active]="selectedTab === 'tab2'"
@@ -22,8 +22,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab5" href="/tabs/tab5" [class.tab-active]="selectedTab === 'tab5'"
-      [class.tab-inactive]="selectedTab !== 'tab3'" (click)="changeTab('tab3')">
-      <ion-icon aria-hidden="true" name="person"></ion-icon>
+      [class.tab-inactive]="selectedTab !== 'tab5'" (click)="changeTab('tab5')">
+      <ion-icon name="person-outline"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 
